tests/extensions/editheader/errors/last-without-index.sieve
require "editheader";

# :last without :index: must fail validation before field name checks
deleteheader :last "X-field:";
